# Meetscribe2

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  DEVELOPER.md  LICENSE  README.md  TEMPLATE_SETUP.md  USER_GUIDE.md  aio_terminal_template.spec  code_for_review.py  config.local.toml  config.toml  entitlements.plist  meetscribe.spec  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  main.yml  release.yml  template-setup.yml
app/: cli.py  transcriber.py  ui.py
app/actions/: app.py  clipboard.py  network.py  registry.py  screenshot.py
app/core/: config.py  config_models.py  context.py  exceptions.py  logging.py  models.py  utils.py
app/integrations/: __init__.py  google_calendar.py
app/services/: agents.py  audio_tools.py  calendar_linker.py  dir_watcher.py  file_processor.py  llm_notes.py  meeting_notes.py
app/shortcuts/: manager.py
docs/: CODE_SIGNING.md  DEVELOPMENT.md  NEXT_STEPS.md  quick_start.md
scripts/: build.sh  build_signed.py  create_dev_certificate.sh  fix_macos_security.sh  release.sh  run-flake8.sh  validate_setup.py
tests/: test_app_context.py  test_cli.py  test_config.py  test_registry.py  test_screenshot_action.py  test_shortcuts.py
