[project]
name = "aio_terminal_template"
version = "0.1.0"
description = "A modern terminal app template with PyInstaller packaging"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Template Author", email = "template@example.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typer",
    "rich",
    "pynput",
    "pyautogui",
    "pyperclip",
    "requests",
    "Pillow",
    "python-daemon",
    "toml",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
    "pyinstaller",
    "flake8",
]

[project.scripts]
aio_terminal_template = "app.cli:app"

[tool.setuptools]
packages = ["app"]
