[project]
name = "meetscribe"
version = "0.1.3"
description = "A tool to automatically convert audio recordings of meetings into structured, actionable notes."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Thiago M Pinto", email = "thiago@madpin.dev" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typer",
    "rich",
    "toml",
    "pydantic>=2.0.0",
    "deepgram-sdk",
    "mutagen",
    "readchar",
    "google-api-python-client",
    "google-auth",
    "google-auth-oauthlib",
    "langchain",
    "langchain-openai",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
    "pyinstaller",
    "flake8",
]

[project.scripts]
meetscribe = "app.cli:app"

[tool.setuptools]
packages = ["app"]
